--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,25 @@
-html{
+body{
+  display: flex;
+  justify-content: center;
   background-color: cadetblue;
+  border:5px solid  darkblue;
+  margin-left: 25em;
+  margin-right: 25em;
+  padding-bottom: 2em;
+}
+
+.film{
+  
+
+}
+
+.new-release{
+  width: 100%;
+  font-size: large;
+  font-weight: 900;
+  border:5px solid  darkblue;
+}
+
+li{
+  padding-bottom: 2em;
 }
